# tickdb

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: README.md  query_cases.py  run_block_index_comparison.py  run_block_pruning_benchmarks.py  run_layout_baselines.py  run_layout_benchmarks.py  run_native_scan_benchmarks.py  run_native_scan_comparison.py
benchmarks/results/: README.md  block_index_comparison_1000000_rows.json  block_index_comparison_1000000_rows.md  block_index_comparison_100000_rows.json  block_index_comparison_100000_rows.md  layout_baseline_1000000_rows.json  layout_baseline_1000000_rows.md  layout_baseline_100000_rows.json  layout_baseline_100000_rows.md  native_scan_comparison_1000000_rows.json  native_scan_comparison_1000000_rows.md  native_scan_comparison_100000_rows.json  native_scan_comparison_100000_rows.md
docs/: README.md  architecture.md  design.md  milestone-04-compaction.md  milestone-06-mmap-readers.md  milestone-07-query-planning.md  milestone-08-query-execution.md  milestone-09-pruning-metrics.md  milestone-10-block-index.md  milestone-11-native-scan.md
examples/: README.md  demo.md  demo.py
tests/: test_benchmark_query_cases.py  test_compaction.py  test_generator.py  test_mmap_reader.py  test_native_scan.py  test_query_execution.py  test_query_planning.py  test_wal.py
tickdb/: __init__.py  cli.py
tickdb/data/: __init__.py  generator.py
tickdb/encoding/: __init__.py  delta.py  dictionary.py  plain.py
tickdb/native/: __init__.py  scan.c  scan.py
(+25 files in other folders)
